--- a/index.html
+++ b/index.html
@@ -1,28 +1,9 @@
-<!-- <!DOCTYPE html> -->
-<!-- <html lang="en"> -->
-<!-- <head> -->
-    <!-- <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Button</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <div class="container">
-        <form action="submit.html">
-            <input type="text"placeholder="Email"id="email"onclick="resetBtn()">
-            <input type="password"placeholder="Password"id="password"onclick="resetBtn()">
-            <input type="submit"value="Sign in"id="submit-btn"onclick="mouseOver()">
-        </form>
-    </div>
-    <script src="script.js"></script>
-</body>
-</html> -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebDSchool</title>
+    <title>NaughtyButton</title>
     <!-- css link  -->
     <link rel="stylesheet" href="style.css" />
   </head>
